--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Generador de cartas aleatorias.js</title>
 
     <!-- Fontawesome is our recomended library for icons -->
     <link
@@ -16,18 +16,24 @@
   </head>
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+    <div class="card">
+      <h2>♥</h2>
+      <h1>7</h1>
+      <h2>♥</h2>
     </div>
+
+    <button id="noTimerButton">New Card!</button>
+    <button id="TimerButton">New Card every 10 secs!</button>
+    
+
+    <div class="inputs">
+      <label for="height"><b>Height:</b></label>
+      <input id="height" type="number" min="1" max="400">
+      <label for="width"><b>Width:</b></label>
+      <input id="width" type="number" min="1" max="300">
+      <button id="SizeButton">Set new size</button>
+    </div>
+
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
