[Arreglados los inputs para cambiar el tamaño de la carta]

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
 
     <div class="inputs">
       <label for="height"><b>Height:</b></label>
-      <input id="height" type="number" min="1" max="400">
+      <input id="height" placeholder="min:350" type="number" min="350" max="400">
       <label for="width"><b>Width:</b></label>
-      <input id="width" type="number" min="1" max="300">
+      <input id="width" placeholder="min:200" type="number" min="200" max="300">
       <button id="SizeButton">Set new size</button>
     </div>
 
